--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-actuator'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-devtools'
+    compile 'org.apache.httpcomponents:httpclient:4.5.2'
 
     compile 'de.codecentric:spring-boot-admin-starter-client:1.4.1'
     compile 'org.jolokia:jolokia-core'
