--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-security'
     compile 'org.springframework.boot:spring-boot-devtools'
     compile 'org.apache.httpcomponents:httpclient:4.5.2'
+    compile 'org.apache.commons:commons-lang3:3.4'    
 
     compile 'de.codecentric:spring-boot-admin-starter-client:1.4.1'
     compile 'org.jolokia:jolokia-core'
