--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,9 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-security'
     compile 'org.springframework.boot:spring-boot-devtools'
     compile 'org.apache.httpcomponents:httpclient:4.5.2'
-    compile 'org.apache.commons:commons-lang3:3.4'    
+    compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'org.apache.commons:commons-collections4:4.1'
+    compile 'commons-io:commons-io:2.5'  
 
     compile 'de.codecentric:spring-boot-admin-starter-client:1.4.1'
     compile 'org.jolokia:jolokia-core'
