--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-spring:
+/samplespring:
   application:
     name: nxtims-web
   boot:
@@ -14,7 +14,7 @@ server:
 system:
   api:
     server:
-      url: http://localhost:7311
+      url: http://10.41.104.189:7311/
 ---
 spring:
   profiles: development
