--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,8 @@ dependencies {
     compile 'org.apache.httpcomponents:httpclient:4.5.2'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.apache.commons:commons-collections4:4.1'
-    compile 'commons-io:commons-io:2.5'  
+    compile 'commons-io:commons-io:2.5'
+    compile 'org.springframework.security:spring-security-test:4.1.3.RELEASE'
 
     compile 'de.codecentric:spring-boot-admin-starter-client:1.4.1'
     compile 'org.jolokia:jolokia-core'
