Notice API 최초 작성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,11 @@ mail:
   from-email: nxtims@e-hlc.com
   from-name: TEAMS
   subject-prefix: TEAMS
+ftp:
+  server: 203.228.216.29
+  username: global
+  password: global15
+  mode: P
 ---
 spring:
   profiles: default
@@ -23,6 +28,7 @@ system:
   api:
     server:
       url: http://10.41.104.189:7311/
+  temp-local-dir: C:\\temp\\    
 ---
 spring:
   profiles: development
@@ -38,6 +44,7 @@ system:
   api:
     server:
       url: http://system-kong-dev.default
+  temp-local-dir: /NOT-YET    
 ---
 spring:
   profiles: staging
@@ -53,6 +60,7 @@ system:
   api:
     server:
       url: http://system-kong-stage.default
+  temp-local-dir: /NOT-YET  
 ---
 spring:
   profiles: production
@@ -68,3 +76,4 @@ system:
   api:
     server:
       url: http://system-kong.default
+  temp-local-dir: /NOT-YET    
