--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'org.apache.httpcomponents:httpclient:4.5.2'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.apache.commons:commons-collections4:4.1'
+    compile 'commons-net:commons-net:3.5'
     compile 'commons-io:commons-io:2.5'
     compile "com.sun.mail:javax.mail"
 
