Change-Id: I6ad2e887495665351fa83f8c1d2470b3c464afe3

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ server:
 system:
   api:
     server:
-      url: http://10.41.104.189:7311/
+      url: http://localhost:7311/
 ---
 spring:
   profiles: development
