--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     compile 'org.apache.commons:commons-collections4:4.1'
     compile 'commons-net:commons-net:3.5'
     compile 'commons-io:commons-io:2.5'
-    compile "com.sun.mail:javax.mail"
+    compile 'com.sun.mail:javax.mail'
 
     compile 'de.codecentric:spring-boot-admin-starter-client:1.4.1'
     compile 'org.jolokia:jolokia-core'
