--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,12 @@ dependencies {
     compile 'commons-net:commons-net:3.5'
     compile 'commons-io:commons-io:2.5'
     compile 'com.sun.mail:javax.mail'
+    compile 'com.lowagie:itext:2.1.7'
+    compile 'org.olap4j:olap4j:1.2.0'
+    compile('net.sf.jasperreports:jasperreports:6.3.0'){
+        exclude group: 'com.lowagie'
+        exclude group: 'org.olap4j'
+    }
 
     compile 'de.codecentric:spring-boot-admin-starter-client:1.4.1'
     compile 'org.jolokia:jolokia-core'
